<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#98D7D1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntubold"
                android:text="@string/matka_exhibition_center"
                android:textSize="18sp" />

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp"/>


            <ImageView
                android:id="@+id/facebookSocialIcon"
                android:layout_width="17dp"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/instagramSocialIcon"
                android:layout_width="17dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/instagram" />

            <ImageView
                android:id="@+id/youtubeSocialIcon"
                android:layout_width="17dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/youtube"/>

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:gravity="center">

        <include
            android:id="@+id/videoView"
            layout="@layout/video_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:background="#6F000000"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/introText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/intro"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />


            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />


        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="-50dp"
            android:background="@android:color/white"
            app:cardBackgroundColor="@color/matka_light"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exploreMatkaBtn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/dark_matka"
                    android:fontFamily="@font/ubuntu"
                    android:text="@string/explore_matka"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/visitMatkaTV"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/ubuntu"
                    android:text="@string/visit_us"
                    android:textAllCaps="false"
                    android:textColor="@color/dark_matka" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>


</LinearLayout>


